; ModuleID = '/home/carl/AnghaBench/linux/tools/testing/selftests/powerpc/ptrace/extr_ptrace-hwbreak.c_get_dbginfo.c'
source_filename = "/home/carl/AnghaBench/linux/tools/testing/selftests/powerpc/ptrace/extr_ptrace-hwbreak.c_get_dbginfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PPC_PTRACE_GETHWDBGINFO = common dso_local global i32 0, align 4
@child_pid = common dso_local global i32 0, align 4
@dbginfo = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [27 x i8] c"Can't get breakpoint info\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @get_dbginfo to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @get_dbginfo() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @PPC_PTRACE_GETHWDBGINFO, align 4
  %3 = load i32, i32* @child_pid, align 4
  %4 = call i32 @ptrace(i32 %2, i32 %3, i32* null, i32* @dbginfo)
  store i32 %4, i32* %1, align 4
  %5 = load i32, i32* %1, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %0
  %8 = call i32 @perror(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0))
  %9 = call i32 @exit(i32 -1) #3
  unreachable

10:                                               ; preds = %0
  ret void
}

declare dso_local i32 @ptrace(i32, i32, i32*, i32*) #1

declare dso_local i32 @perror(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
